stop the moon and sun getting out of the screen

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,9 +128,6 @@ h1 {
   text-shadow: 1px 1px 1px black;
 }
 
-.frontPageImage {
-  background-image: url('./images/frontpagelogo/png');
-}
 
 .homepageButtons {
   display: flex;
@@ -565,29 +562,24 @@ input {
   /* -webkit-box-reflect: below 1px linear-gradient(transparent,#0004); */
 }
 
+/* Sun and Moon Movement */
 .sun {
   width: 150px;
   position: absolute;
   top: 100px;
   left: -200px;
   z-index: -2;
+  overscroll-behavior-y: none;
 }
 .moon {
-  width: 150px;
+  width: 100px;
   position: absolute;
   top: 100px;
   left: -200px;
   z-index: -2;
+  overscroll-behavior-y: none;
 }
 
-.container {
-  width:fit-content;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-}
 .box {
   background-color: #2774d8;
   position: relative;
